# ConfigFileLib

./: CMakeLists.txt  ReadMe.md
include/: ConfigFile.h  ConfigFilePrepare.h
include/ConfigFileLib/: ConfigFile.h  ConfigFilePrepare.h
resources/: ConfigFile.h
src/: ConfigFile.cpp  ConfigFilePrepare.cpp
